# cliphistory

./: README.md  package-lock.json  package.json
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clip.rs  clipboard_handler.rs  database.rs  lib.rs  main.rs  utils.rs
svelte-frontend/: index.html  package-lock.json  package.json  vite.config.js
svelte-frontend/src/: App.svelte  app.css
