[package]
name = "cliphistory"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cliphistory_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon" ] }
tauri-plugin-opener = "2"
arboard = "3.5.0"
rusqlite = "0.35.0"
md-5 = "0.10.6"
hex = "0.4.3"
dirs = "6.0.0"
objc = "0.2"
objc-foundation = "0.1" # For NSString and other foundation types
objc_id = "0.1"         # For id and AutoreleasePool
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.24" # Provides pre-defined bindings for AppKit (NSWorkspace, NSRunningApplication)
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

